gateway-config/akamai-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: akamai-route
  namespace: default
spec:
  parentRefs:
  - name: eg
  hostnames:
  - control.akamai.com
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: akamai-forward-proxy
    matches:
    - path:
        type: PathPrefix
        value: /
